--- a/geonode/locale/vi/LC_MESSAGES/django.po
+++ b/geonode/locale/vi/LC_MESSAGES/django.po
@@ -27,7 +27,7 @@ msgstr ""
 "Project-Id-Version: GeoNode\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-07 14:01+0200\n"
-"PO-Revision-Date: 2021-09-10 20:34+0700\n"
+"PO-Revision-Date: 2021-09-29 17:16+0700\n"
 "Last-Translator: Julien Collaer <julien.collaer@opengeode.be>\n"
 "Language-Team: Vietnamese (http://www.transifex.com/geonode/geonode/language/vi/)\n"
 "Language: vi\n"
@@ -381,7 +381,7 @@ msgid "CSW WKT geometry"
 msgstr "CSW WKT geometry"
 
 msgid "Metadata uploaded preserve"
-msgstr "Bảo toàn meatadata đã được tải lên"
+msgstr "Bảo toàn metadata"
 
 msgid "Featured"
 msgstr "Nổi bật"
@@ -940,7 +940,7 @@ msgid "Full metadata"
 msgstr "Metadata đầy đủ"
 
 msgid "Text format"
-msgstr "Dịnh dạng văn bản"
+msgstr "Định dạng văn bản"
 
 msgid "HTML format"
 msgstr "Định dạng HTML"
